--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,44 @@ margin-right: 220px;
     border-radius: 48px;
     width: 403px;
     height: 328px;
+    /* margin-left: 150px; */
+}
+.productive{
+    display: flex;
+    justify-content: center;
+    
+}
+.title{
+    font-size: 38px;
+    font-weight: bold;
+    color: #252432;
+}
+.productive-main{
+    background-color:#cfcedd ;
+    text-align: center;
+    padding:50px 142px ;
+    margin:116px 160px ;
+    border-radius: 24px;
+    margin-bottom: 0px;
+
+   
+}
+.sub-user{
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+    justify-content: center;
+    margin-right: 158px;
+    /* margin-bottom: 0px; */
+}
+.descrip{
+    font-size: 20px;
+    font-weight:200;
+    margin-right: 188px;
+    margin-top: 10px;
+    
+}
+h2{
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
