--- a/styles.css
+++ b/styles.css
@@ -127,10 +127,48 @@ ul li a{
 
 }
 .end-part{
-    padding: 103px 450px;
+    padding: 103px 445px;
+    background-color: white;
    
 }
 h1{
     margin-bottom: 8px;
 
+}
+.touch{
+    display: flex;
+}
+.headline{
+    font-size: 90px;
+    font-weight: bold;
+    margin-top: 170px;
+}
+.touch{
+    padding:50px 150px ;
+    margin: 30px 150px;
+}
+
+.box input[type="email"],input[type="text"],textarea{
+
+    background-color:white;
+    /* height: 64px; */
+    border-radius:10px ;
+    padding: 32px 20px;
+    display: block;
+    width: 100%;
+    margin-bottom: 19px;
+    border: none;
+    font-size: 15px;
+    color: #000000;
+    margin-right: 150px;
+}
+h1{
+    margin-right: 115px;
+}
+body{
+    background-color: rgb(239, 239, 237);
+}
+.btn-2{
+    width: 100%;
+    margin-right: 150px;
 }
