--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ h1{
 .headline{
     font-size: 90px;
     font-weight: bold;
-    margin-top: 170px;
+    margin-top: 100px;
 }
 .touch{
     padding:50px 150px ;
@@ -151,7 +151,6 @@ h1{
 .box input[type="email"],input[type="text"],textarea{
 
     background-color:white;
-    /* height: 64px; */
     border-radius:10px ;
     padding: 32px 20px;
     display: block;
@@ -161,6 +160,7 @@ h1{
     font-size: 15px;
     color: #000000;
     margin-right: 150px;
+    margin-top: 9px;
 }
 h1{
     margin-right: 115px;
@@ -172,3 +172,57 @@ body{
     width: 100%;
     margin-right: 150px;
 }
+.para{
+    color: #B3B3B3;
+    /* height: 22px;
+    width: 267px; */
+}
+.sub-title1{
+    color: #757575;
+      /* height: 22px;
+    width: 267px; */
+    margin-bottom: 0px;
+}
+.name{
+    display: inline-block;
+    gap: none;
+    font-size: 10px;
+}
+.photo{
+    border-radius: 30px;
+}
+ .feed-sub-title{
+    color: #1E1E1E;
+    height: 44px;
+    width: 318px;
+    font-weight: 500;
+ }
+ .feed-title{
+color: #1E1E1E;
+font-weight: bold;
+
+ }
+ .feed-sec{
+    /* display: flex; */
+    background-color:#FFFFFF ;
+    padding: 24px;
+    border-radius: 14px;
+    /* gap: 24px; */
+    height: 200px;
+    width: 360px;
+ }
+ .main-feed{
+    display: flex;
+    gap: 24px;
+ }
+ .feedback-title{
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+ }
+ h2{
+    margin-bottom:50px ;
+ }
+ .feedback{
+    padding:130px 150px ;
+ }
