--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ h1{
 .headline{
     font-size: 90px;
     font-weight: bold;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 .touch{
     padding:50px 150px ;
@@ -203,17 +203,19 @@ font-weight: bold;
 
  }
  .feed-sec{
-    /* display: flex; */
     background-color:#FFFFFF ;
     padding: 24px;
     border-radius: 14px;
-    /* gap: 24px; */
+    /* margin:137px 150px; */
     height: 200px;
     width: 360px;
+    
  }
  .main-feed{
     display: flex;
     gap: 24px;
+    justify-content: center;
+    
  }
  .feedback-title{
     font-size: 42px;
@@ -224,5 +226,9 @@ font-weight: bold;
     margin-bottom:50px ;
  }
  .feedback{
+    /* text-align: center; */
     padding:130px 150px ;
+    margin-right: 150px; */
+    width: 1140px;
+    height: 342px;
  }
