--- a/styles.css
+++ b/styles.css
@@ -89,19 +89,23 @@ margin-right: 220px;
 
    
 }
+
 .sub-user{
     font-size: 80px;
     font-weight: bold;
     color: #4E47FF;
     justify-content: center;
     margin-right: 158px;
-    /* margin-bottom: 0px; */
+    
+    
+    
 }
 .descrip{
     font-size: 20px;
     font-weight:200;
     margin-right: 188px;
     margin-top: 10px;
+     text-align: center;
     
 }
 h2{
@@ -127,9 +131,7 @@ ul li a{
     text-align: center;
 
 }
-.links{
-    /* justify-content: center; */
-}
+
 .title-logo{
     color:#4E47FF ;
     font-size: 100px;
@@ -155,7 +157,7 @@ h1{
     margin-top: 120px;
 }
 .touch{
-    padding:50px 150px ;
+    padding:50px 0px ;
     margin: 30px 150px;
     justify-content: center;
 }
@@ -185,18 +187,16 @@ body{
     background-color: rgb(239, 239, 237);
 }
 .btn-2{
-    width: 100%;
+    width: 112%;
     margin-right: 150px;
 }
 .para{
     color: #B3B3B3;
-    /* height: 22px;
-    width: 267px; */
+  
 }
 .sub-title1{
     color: #757575;
-      /* height: 22px;
-    width: 267px; */
+      
     margin-bottom: 0px;
 }
 .name{
